[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "road-ml-pipeline"
version = "1.0.0"
description = "RoadML Pipeline - Enterprise ML Pipeline Orchestration System"
readme = "README.md"
license = {text = "Proprietary - BlackRoad OS, Inc."}
requires-python = ">=3.10"
authors = [
    {name = "BlackRoad OS", email = "blackroad.systems@gmail.com"}
]
keywords = [
    "ml-pipeline",
    "machine-learning",
    "mlops",
    "feature-store",
    "model-registry",
    "experiment-tracking",
    "hyperparameter-optimization",
    "distributed-training",
    "model-serving",
    "blackroad-os",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.0.0",
    "black>=23.0.0",
    "ruff>=0.0.260",
    "pre-commit>=3.0.0",
]
distributed = [
    "ray>=2.0.0",
    "dask>=2023.1.0",
]
serving = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "grpcio>=1.50.0",
]
tracking = [
    "mlflow>=2.0.0",
]
storage = [
    "redis>=4.0.0",
    "sqlalchemy>=2.0.0",
    "boto3>=1.26.0",
]
all = [
    "road-ml-pipeline[dev,distributed,serving,tracking,storage]",
]

[project.urls]
Homepage = "https://github.com/BlackRoad-OS/road-ml-pipeline"
Documentation = "https://docs.blackroad.io/ml-pipeline"
Repository = "https://github.com/BlackRoad-OS/road-ml-pipeline"

[project.scripts]
roadml = "mlpipeline_core.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mlpipeline_core*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
strict = true

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 88
target-version = "py310"
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]
ignore = ["E501"]

[tool.coverage.run]
branch = true
source = ["mlpipeline_core"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
